# meeting-notes-summarize-ai

./: .env.example  .gitignore  README.md  app.py  langgraph.json  main.py  pyproject.toml  requirements.txt  server.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
frontend/: index.html
scripts/: run_demo.py  test_pipeline.py
src/agents/: graph.py  prompts.py  specialist_agents.py
src/api/: main.py
src/api/routes/: ingest.py  query.py
src/core/: __init__.py  config.py  llm.py  models.py
src/ingestion/: chunker.py  diarizer.py  pipeline.py  transcriber.py
src/rag/: cache.py  compressor.py  query_expander.py  vector_store.py
static/: app.js  index.html  style.css
tests/: test_chunker.py  test_compressor.py  test_graph_routing.py
